# MQA_identifier

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md  instructions.md  main.cc  mqa_identifier.h  verify.sh
.github/workflows/: build.yml  cmake.yml
gui/: CMakeLists.txt
